--- a/public/stylesheets/scoresheet.css
+++ b/public/stylesheets/scoresheet.css
@@ -27,7 +27,7 @@ html, body {
 */
 
 body {
-	background: url('../../assets/images/bg.jpg') no-repeat center center fixed;
+	background: url('../images/bg.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
