--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout('./layouts/main') -%>
-<% block('title', 'RED Wizard Scoring System'); -%>
+<% block('title', 'Error'); -%>
 
-<!-- Here you may put some contents to the body tag -->
-<h1><%= message %></h1>
-<p><%= error.status%></p>
-<pre><%= error.stack %></pre>
+		<!-- Here you may put some contents to the body tag -->
+		<h1><%= message %></h1>
+		<p><%= error.status %></p>
+		<pre><%= error.stack %></pre>
