--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,10 +1,15 @@
 <% layout('./layouts/main') -%>
 <% block('title', 'RED Wizard Scoring System'); -%>
-<% block('head', '
-	<link rel="stylesheet" href="/stylesheets/scoresheet.css">
-') %>
+<% stylesheet('stylesheets/sticky-footer-navbar.css') -%>
 
-<!-- Here you may put some contents to the body tag -->
-<div class="container">
-	
-</div>
+		<%- partial('./partials/nav') %>
+
+		<!-- Here you may put some contents to the body tag -->
+		<div class="container">
+	    	<div class="page-header">
+	        	<h1>Sticky footer with fixed navbar</h1>
+	      	</div>
+	      	<p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
+	    </div>
+
+	    <%- partial('./partials/foot') %>
