--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -9,6 +9,14 @@
 		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 
+		<%- stylesheets %>
+
+	</head>
+	
+	<body>
+
+		<%- body %>
+
 		<!-- Jquery -->
 		<script src="/javascripts/jquery.min.js"></script>
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script> -->
@@ -25,13 +33,7 @@
 		
 		<script src="/javascripts/angular-animate.js"></script>
 
-		<%- blocks.head %>
-
-	</head>
-	
-	<body>
-
-		<%- body %>
+		<%- scripts %>
 
 	</body>
 </html>
