--- a/server/views/partials/nav.ejs
+++ b/server/views/partials/nav.ejs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="/"><img src="/images/redlogo.png" style="height: 100%" alt=""></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
