--- a/server/views/judge-index.ejs
+++ b/server/views/judge-index.ejs
@@ -1,25 +1,36 @@
 <% layout('./layouts/main') -%>
 <% block('title', 'RED Wizard Scoring System') -%>
-<% stylesheet('stylesheets/sticky-footer-navbar.css') -%>
+<% stylesheet('stylesheets/landing.css') -%>
 
-		<!-- Here you may put some contents to the body tag -->
-		<%- partial('./partials/nav') %>
 
-		<div class="container">
-	    	<div class="page-header">
-	    		<center>
-	    			<img src="/images/redwizard(320x320).png" alt="">
-	        		<h1>
-	        			SCORING SYSTEM
-	        		</h1>
-	        	</center>
-	      	</div>
-	      	<p class="lead">
-	      		
-	      	</p>
-	    </div>
+	<table id="wrapper">
+		<tr>
+			<td>
+			
+				<div id="p1">
+					<!--
+					READY FOR ANGULAR
+					<span id="landing-event-name"><b>{{event_name}}</b></span><br/>
+					-->
+					<span id="landing-event-name"><b>UHAC</b> Baguio</span><br/>
+					<small id="landing-sub-name"><b>SCORING SYSTEM</small>
+				</div>
+				
+				<div id="center-logo">
+				</div>
+				
+				<div id="p2">
+					<small class="sub">POWERED BY</small><br/>
+					<span id="company"><strong>RED Wizards Events Management</strong></span><br/>
+					<small class="sub"><i>Created by </i></small>
+					<span id="dev-grp">Canley Codes</span>
+				</div>
+				
+			</td>
+		</tr>
+	</table>
+		
 
-	    <%- partial('./partials/foot') %>
 
 		<script src = "http://localhost:3000/javascripts/libraries/socket.io.min.js">
 		</script>
