Bounce added to landing

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -94,3 +94,46 @@ html, body, #wrapper {
 	margin-top: -8em;
 	margin-left: -10em;
 }
+
+/* BOUNCE EFFECT */
+		 
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
+
+span#landing-event-name {  
+	position: absolute;
+	left: -1.5em;
+	height: 3em;
+	width: 10em;
+ 
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation-timing-function: ease-in-out;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+}
+
+span#landing-event-name:hover {
+	cursor: pointer;
+	animation-name: bounce;
+	-moz-animation-name: bounce;
+	-webkit-animation-name: bounce;
+}
