Line break on bounce

--- a/server/views/judge-index.ejs
+++ b/server/views/judge-index.ejs
@@ -13,7 +13,7 @@
 					<span id="landing-event-name"><b>{{event_name}}</b></span><br/>
 					-->
 					<span id="landing-event-name"><b>UHAC</b> Baguio</span><br/>
-					<small id="landing-sub-name"><b>SCORING SYSTEM</small>
+					<br/><br/><small id="landing-sub-name"><b>SCORING SYSTEM</small>
 				</div>
 				
 				<div id="center-logo">
