--- a/server/views/admin.ejs
+++ b/server/views/admin.ejs
@@ -1,6 +1,7 @@
 <% layout('./layouts/main') -%>
 <% block('title', 'RED Wizard Scoring System'); -%>
-<% script('javascripts/admin-scoring.js') %>
+<% script('javascripts/libraries/socket.io.min.js') -%>
+<% script('javascripts/admin-scoring.js') -%>
 
 		<!-- Here you may put some contents to the body tag -->
 		<div class="container  container-table">
