--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -21,10 +21,6 @@
 		<script src="/javascripts/jquery.min.js"></script>
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script> -->
 
-		<!-- Tether JS -->
-		<script src="/javascripts/tether.min.js"></script>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> -->
-
 		<!-- Bootstrap JS -->
 		<script src="/javascripts/bootstrap.min.js"></script>
 		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -32,6 +28,8 @@
 		<script src="/javascripts/angular.min.js"></script>
 		
 		<script src="/javascripts/angular-animate.js"></script>
+
+		<script src="/javascripts/angular-route.js"></script>
 
 		<%- scripts %>
 
