Judge and Admin Connected

--- a/server/views/judge-index.ejs
+++ b/server/views/judge-index.ejs
@@ -1,4 +1,4 @@
-<% layout('./layouts/main') -%>
+<% layout('./layouts/judge-layout') -%>
 <% block('title', 'RED Wizard Scoring System') -%>
 <% stylesheet('stylesheets/landing.css') -%>
 
