--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,4 +1,4 @@
-<% layout('./layouts/main') -%>
+<% layout('./layouts/judge-layout') -%>
 <% block('title', 'Error'); -%>
 
 		<!-- Here you may put some contents to the body tag -->
