--- a/public/views/judging-opened.html
+++ b/public/views/judging-opened.html
@@ -1,12 +1,56 @@
-<table>
-	<tr>
-		<td>		
-			<div>
-				<h1>Judging is now open!!!</h1>
-				<p class="lead">
-					The more entries, more chances of winning.
-				</p>
+<header class="container-fluid">
+	<div class="row">
+		<div class="col-md-12 text-center" id="head-name">
+			WELCOME
+		</div>
+	</div>
+</header>
+
+<section class="container-fluid" id="icon-section">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<img class="animated rollIn" id="icon" src="images/icon.png">
+		</div>	
+	</div>
+</section>
+
+<section class="container-fluid" id="register-section">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<div class="card">
+				<div class="card-block" id="card-box"> 
+					<div class="col-md-12 text-center">
+						<h3 class="card-title">JUDGING IS NOW OPEN</h3>
+        			</div>
+        			<br>
+
+        			<form class="form">
+        				<input placeholder="ENTER YOUR NAME" type="text" id="input-container" class="form-control" required>
+						<!-- <div class="loader">
+						
+						</div> -->
+						<input id='register-button' class="btn btn-primary" data-loading-text="Please Wait..." type="submit">
+						</input>
+        			</form>
+				</div>
 			</div>
-		</td>
-	</tr>
-</table>
+		</div>
+	</div>
+</section>
+
+
+<!-- <script src="/javascripts/mdb.min.js"></script> -->
+<script>
+    $(function() { 
+	    $(".btn").click(function(){
+	    	if($('#input-container').val() == ""){
+
+	    	}
+	    	else{
+		        $(this).button('loading').queue(function() {
+		            
+		        }); 
+	    	}       
+	    });
+	});  
+</script>
