--- a/server/views/layouts/judge-layout.ejs
+++ b/server/views/layouts/judge-layout.ejs
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title><%= blocks.title %></title>
-		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<!-- Bootstrap -->
@@ -30,10 +29,13 @@
 		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
 		<script src="/javascripts/angular.min.js"></script>
-		
+
 		<script src="/javascripts/angular-animate.js"></script>
 
 		<script src="/javascripts/angular-route.js"></script>
+
+		<script src="/javascripts/angular-css.min.js"></script>
+
 
 		<%- scripts %>
 
