added updated judge landing

--- a/public/views/judge-landing.html
+++ b/public/views/judge-landing.html
@@ -6,12 +6,12 @@
 					READY FOR ANGULAR
 					<span id="landing-event-name"><b>{{event_name}}</b></span><br/>
 				-->
-				<span id="landing-event-name"><b>UHAC</b> Baguio</span><br/>
+				<span id="landing-event-name"><b>UHAC</b> Cebu</span><br/>
 				<br/><br/><small id="landing-sub-name"><b>SCORING SYSTEM</small>
 			</div>
 						
 			<div id="center-logo">
-
+				
 			</div>
 						
 			<div id="p2">
