--- a/public/views/judge-landing.html
+++ b/public/views/judge-landing.html
@@ -1,25 +1,30 @@
 <table>
 	<tr>
 		<td>
-			<div id="p1">
+			<div id="p1" class="text-center">
 				<!--
 					READY FOR ANGULAR
-					<span id="landing-event-name"><b>{{event_name}}</b></span><br/>
+					<span id="event-name"><b>{{event_name}}</b></span><br/>
+				
+				<span id="event-name"><b>UHAC</b> Cebu</span><br/>
+				<br/><small id="system-name"><b>SCORING SYSTEM</small>
+				
 				-->
-				<span id="landing-event-name"><b>UHAC</b> Cebu</span><br/>
-				<br/><br/><small id="landing-sub-name"><b>SCORING SYSTEM</small>
+
+				<h1 id="event-name"><b>UHAC</b> Cebu</h1>
+				<small id="system-name"><b>SCORING SYSTEM</small>
 			</div>
 						
 			<div id="center-logo">
 				
 			</div>
 						
-			<div id="p2">
+			<div id="p2" class="text-center">
 				<small class="sub">POWERED BY</small><br/>
-				<span id="company"><strong>RED Wizards Events Management</strong></span><br/>
+				<span id="company"><strong>RED Wizard Events Management</strong></span><br/>
 				<small class="sub"><i>Created by </i></small>
-				<span id="dev-grp">Canley Codes</span>
+				<span id="dev-grp">Mamba Codes</span>
 			</div>
 		</td>
 	</tr>
-</table>
+</table> 
