Judge Registration revision

--- a/public/views/judging-opened.html
+++ b/public/views/judging-opened.html
@@ -1,42 +1,22 @@
-<header class="container-fluid">
-	<div class="row">
-		<div class="col-md-12 text-center" id="head-name">
-			WELCOME
-		</div>
-	</div>
-</header>
-
-<section class="container-fluid" id="icon-section">
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<img class="animated rollIn" id="icon" src="images/icon.png">
-		</div>	
-	</div>
-</section>
-
-<section class="container-fluid" id="register-section">
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<div class="card">
-				<div class="card-block" id="card-box"> 
-					<div class="col-md-12 text-center">
-						<h3 class="card-title">JUDGING IS NOW OPEN</h3>
-        			</div>
-        			<br>
-
-        			<form class="form">
-        				<input placeholder="ENTER YOUR NAME" type="text" id="input-container" class="form-control" required>
-						<!-- <div class="loader">
-						
-						</div> -->
-						<input id='register-button' class="btn btn-primary" data-loading-text="Please Wait..." type="submit">
-						</input>
-        			</form>
-				</div>
+<table>
+	<tr>
+		<td>
+			<div id="p1" class="text-center">
+				<h1 id="event-name">JUDGING IS NOW OPEN</h1>
 			</div>
-		</div>
-	</div>
-</section>
+						
+			<div id="p3" class="text-center">
+				<form class="form">
+        			<input placeholder="Enter Your Name" type="text" id="input-container" class="form-control text-center" required><br/>
+					<!-- <div class="loader">
+						
+					</div> -->
+					<input id="register-button" class="btn" class="form-control" data-loading-text="Please Wait..." type="submit" value="SUBMIT">
+        		</form>
+			</div>
+		</td>
+	</tr>
+</table> 
 
 
 <!-- <script src="/javascripts/mdb.min.js"></script> -->
