--- a/public/stylesheets/judge-view.css
+++ b/public/stylesheets/judge-view.css
@@ -13,7 +13,8 @@ html, body, #wrapper {
 	background: radial-gradient(center, #BF4D00, #E52A00);
 }
 
-		
+/* Judge Landing Style */
+	
 #wrapper td {
     vertical-align: middle;
     text-align: center;
@@ -175,4 +176,42 @@ html, body, #wrapper {
 @-ms-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+/* Judge Registration Style */
+
+input {
+	border-radius: 0;
+	background-color: blue;
+}
+
+#p3 {
+	width: 20em;
+	height: 20em;
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	margin-top: -10em;
+	margin-left: -10em;
+}
+
+#register-button {
+	color: #fff;
+	background-color: #0e0058;
+	border:  solid 2px #fff;
+	height: 50px;
+	width:  100px;
+	transition: background-color 0.5s ease;
+}
+
+#register-button:hover {
+	background-color: #3923ab;
+}
+
+#register-button:focus {
+	background-color: #1b0688;
+}
+
+#input-container {
+	
 }
