--- a/public/views/judging-opened.html
+++ b/public/views/judging-opened.html
@@ -1,13 +1,22 @@
 <table>
 	<tr>
 		<td>
+			<!--
 			<div id="p1" class="text-center">
-				<h1 id="event-name">JUDGING IS NOW OPEN</h1>
+				<h3 id="event-name"><b>UHAC</b> Cebu</h3>
+				<small id="system-name"><b>SCORING SYSTEM</b></small>
 			</div>
-						
+			-->
+			<div id="p4" class="text-center">
+				<p id="welcome-judge">JUDGING IS NOW OPEN</h3><br/>
+				<small class="sub">Please enter your name</small>
+			</div>
+
 			<div id="p3" class="text-center">
+				<br/>
+				<br/>
 				<form class="form">
-        			<input placeholder="Enter Your Name" type="text" id="input-container" class="form-control text-center" required><br/>
+        			<input placeholder="Enter Your Name here" type="text" id="input-container" class="form-control text-center" autofocus required><br/>
 					<!-- <div class="loader">
 						
 					</div> -->
